--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@hookform/resolvers": "^2.9.10",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
@@ -16,6 +17,7 @@
     "react": "18.0.0",
     "react-hook-form": "^7.39.1",
     "react-native": "0.69.5",
+    "react-native-heroicons": "^3.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
